Change color scheme

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1574,7 +1574,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #0AA7B7 !important;
 		}
 
 	strong, b {
@@ -1726,7 +1726,7 @@
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #0AA7B7;
 		font-size: 3.5em;
 	}
 
@@ -1789,7 +1789,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #0AA7B7;
 		}
 
 	.select-wrapper {
@@ -1899,7 +1899,7 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #4acaa8;
+			border-color: #0AA7B7;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2092,7 +2092,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #4acaa8;
+					background: #0AA7B7;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
@@ -2381,7 +2381,7 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #4acaa8;
+			background-color: #0AA7B7;
 			color: #ffffff !important;
 		}
 
@@ -2463,7 +2463,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background: #0AA7B7;
 		color: #d1f1e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2571,7 +2571,7 @@
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #0AA7B7 !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -2602,7 +2602,7 @@
 /* One */
 
 	#one:before {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/background.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -2850,7 +2850,7 @@
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #0AA7B7;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
@@ -3090,3 +3090,13 @@
 			}
 
 	}
+
+.contact-icons {
+	list-style-type: none;
+	display: flex;
+	justify-content: space-around;
+}
+
+#contact-p {
+	margin: 0 0 2em 0;
+}
