--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -40,10 +40,10 @@
 		border3-bg:			#eaeaea,
 
 		accent1: (
-			bg:				#4acaa8,
+			bg:				#0AA7B7,
 			fg-bold:		#ffffff,
-			fg:				mix(#4acaa8, #ffffff, 25%),
-			fg-light:		mix(#4acaa8, #ffffff, 40%)
+			fg:				mix(#0AA7B7, #ffffff, 25%),
+			fg-light:		mix(#0AA7B7, #ffffff, 40%)
 		),
 
 		accent2: (
@@ -54,10 +54,10 @@
 		),
 
 		header: (
-			bg:				#4acaa8,
+			bg:				#0AA7B7,
 			fg-bold:		#ffffff,
-			fg:				mix(#4acaa8, #ffffff, 25%),
-			fg-light:		mix(#4acaa8, #ffffff, 40%),
-			border:			mix(#4acaa8, #ffffff, 90%)
+			fg:				mix(#0AA7B7, #ffffff, 25%),
+			fg-light:		mix(#0AA7B7, #ffffff, 40%),
+			border:			mix(#0AA7B7, #ffffff, 90%)
 		)
 	);
